apps/cxs-mimir-chat/overlays/staging/mimir-chat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-mimir-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: agents.contextsuite.dev
      http:
        paths:
          - backend:
              service:
                name: cxs-mimir-web
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - agents.contextsuite.dev 
      secretName: agents-tls
